--- a/asupro_front/package.json
+++ b/asupro_front/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@nextui-org/react": "^2.0.9",
     "axios": "^1.4.0",
+    "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
